content edits, fix ticker arrow load

--- a/_includes/home-connect.html
+++ b/_includes/home-connect.html
@@ -2,7 +2,7 @@
   <div class="hero-text text-center">
       <h1 class="hero-header">Coast-to-Coast Network</h1>
       <h2 class="hero-sub">
-        We are building a pan-Canadian network of streaming partners that will define the future of the industry. Cannabis Wheaton is laying the groundwork and facilitating the connections between licensed producers, consumers and investors across the country.
+        We are building a pan-Canadian network of streaming partners that will define the future of the industry. Cannabis Wheaton is laying the groundwork and facilitating the connections between licensed producers and consumers.
       </h2>
       <a href="{{site.baseurl}}/contact" class="svg-wrapper-two">
         <svg height="40" width="130" xmlns="http://www.w3.org/2000/svg">
