--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,6 +16,7 @@
   <div class="stock-ticker">
     <div class="symbol"></div>
     <div class="ask"></div>
+    <div class="asterisk">*</div>
     <div class="change"></div>
   </div>
 
