--- a/_includes/bg-video.html
+++ b/_includes/bg-video.html
@@ -13,7 +13,7 @@
         <source src="http://cannabiswheaton.co/images/bg-vid.mp4">
     </video>
   </div>
-  <a class="down-arrow" href="#smooth" id="smooth">
+  <a class="scroll-arrow" href="#smooth" id="smooth">
     <svg class="arrow">
       <path class="a1" d="M0 40 L30 72 L60 40"></path>
     </svg>
