--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -20,6 +20,7 @@ $weiss-m: 'weissenhof_grotesk_med', sans-serif;
   color: #fff;
   line-height: 1.4;
   margin-bottom: 3.5rem;
+  font-size: 14px;
   @include bp(phone) {
     font-size: 16px;
   }
