footer style, new bios

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,28 @@
 <footer id="footer">
-  <div class="footer-nav">
-    <a class="footer-link" href="{{site.baseurl}}/about" onclick="closeNav()">About Us</a>
-    <a class="footer-link" href="{{site.baseurl}}/team" onclick="closeNav()">Team</a>
-    <a class="footer-link" href="{{site.baseurl}}/contact" onclick="closeNav()">Contact</a>
-  </div>
-  <a class="w-icon" href="{{site.baseurl}}/">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 71.7 34.3">
-      <g fill="#888">
-        <path d="M32.8 34.2c-4.4 0-8.5.1-12.6 0-1.8 0-3.4-.9-4.3-2.4C14 28.3.6 2 0 .9-.1.7 0 0 .9 0h10.7c2.5 0 4.3.9 5.3 2.7 1.3 2.5 15.8 31.1 15.9 31.5"/>
-        <path d="M56.8 34.2c-4.4 0-8.5.1-12.6 0-1.8 0-3.4-.9-4.3-2.4C38.1 28.3 24.6 2 24.1.9c-.1-.2-.1-.9.8-.9h10.7c2.5 0 4.3.9 5.3 2.7 1.4 2.5 15.8 31.1 15.9 31.5"/>
-        <path d="M70.8.1c-.5 0-3.9-.1-7.3-.1C61.1 0 59 1.3 58 3.4c-1.7 3.2-3.2 6.4-4.9 9.6-.2.4-.1.9.3 1.1.1.1.2.1.4.1.5.1 3.9.1 7.3.1 2.3 0 4.5-1.3 5.5-3.4 1.7-3.2 3.2-6.4 4.9-9.6.2-.4.1-.8-.3-1.1-.1 0-.3-.1-.4-.1"/>
-      </g>
-    </svg>
-  </a>
-  <div class="footer-copyright">
-    <p class="copyright">© 2017 Cannabis Wheaton Income Corp.</p>
-  </div>
-  <div class="footer-inquiries">
-    <p class="footer-inq">INVESTOR RELATED INQUIRIES</p>
-    <p class="footer-inq">T: 604 667 7130</p>
-    <p class="footer-inq">E: Mario@skanderbegcapital.com</p>
-    <p class="footer-inq">W: skanderbegcapital.com</p>
-  </div>
-  <div class="soshmeeds">
-    <a class="sosh-link" href="https://facebook.com/canwheaton">Facebook</a>
-    <a class="sosh-link" href="https://twitter.com/cannabiswheaton">Twitter</a>
-    <a class="sosh-link" href="https://linkedin.com/company-beta/18043832">LinkedIn</a>
+  <div class="footer-wrap">
+    <div class="footer-nav">
+      <a class="footer-link" href="{{site.baseurl}}/about" onclick="closeNav()">About Us</a>
+      <a class="footer-link" href="{{site.baseurl}}/team" onclick="closeNav()">Team</a>
+      <a class="footer-link" href="{{site.baseurl}}/contact" onclick="closeNav()">Contact</a>
+    </div>
+    <div class="soshmeeds">
+      <a class="sosh-link" href="https://facebook.com/canwheaton">Facebook</a>
+      <a class="sosh-link" href="https://twitter.com/cannabiswheaton">Twitter</a>
+      <a class="sosh-link" href="https://linkedin.com/company-beta/18043832">LinkedIn</a>
+    </div>
+    <div class="footer-inquiries">
+      <p class="footer-inq">INVESTOR RELATIONS</p>
+      <p class="footer-inq">T: 604 667 7130</p>
+      <p class="footer-inq">E: Mario@skanderbegcapital.com</p>
+      <p class="footer-inq">W: <a class="foot-link" href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
+    </div>
+    <div class="footer-sm">
+      <div class="footer-copyright">
+        <p class="copyright">© 2017 Cannabis Wheaton Income Corp.</p>
+      </div>
+      <div class="delay">
+        <p>* Quote delayed by 20 minutes</p>
+      </div>
+    </div>
   </div>
 </footer>
