--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -141,6 +141,9 @@ nav {
 			font-size: 14px;
 		}
 	}
+	.asterisk {
+		margin-left: -3px;
+	}
 }
 
 .arrows {
@@ -148,7 +151,7 @@ nav {
 		display: none;
 		width: 10px;
 		position: absolute;
-		right: 8.2rem;
+		right: 8.3rem;
 		top: 29px;
 		@include bp(tablet) {
 			top: 24px;
