--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -121,14 +121,13 @@
 .hero-img {
   height: 300px;
   background-color: #4b4e53;
+  text-align: center;
   @include bp(tablet) {
     height: 500px;
   }
   img {
     height: 300px;
-    @include bp(phone) {
-      width: 100%;
-    }
+    margin: 0 auto;
     @include bp(tablet) {
       height: 500px;
     }
