--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -9,6 +9,7 @@ footer {
   }
   .footer-wrap {
     max-width: 380px;
+    text-align: center;
     margin: 0 auto;
     padding: 4rem 0;
     @include bp(tablet) {
@@ -17,6 +18,7 @@ footer {
     }
     .footer-nav {
       display: inline-block;
+      text-align: left;
       width: 21%;
       vertical-align: top;
       @include bp(tablet) {
@@ -40,6 +42,7 @@ footer {
       }
     }
     .soshmeeds {
+      text-align: left;
       display: inline-block;
       width: 21%;
       vertical-align: top;
@@ -65,8 +68,9 @@ footer {
     }
     .footer-inquiries {
       color: $m-grey;
+      text-align: left;
       display: inline-block;
-      width: 55%;
+      width: 52%;
       vertical-align: top;
       @include bp(tablet) {
         width: 35%;
@@ -91,7 +95,7 @@ footer {
       }
       .delay {
         text-align: center;
-        margin-top: 1rem;
+        margin-top: 2rem;
         @include bp(tablet) {
           text-align: left;
           margin-top: 0;
