new mailto link, contact header pushed down

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
     <div class="footer-inquiries">
       <p class="footer-inq">INVESTOR RELATIONS</p>
       <p class="footer-inq">604 667 7130</p>
-      <p class="footer-inq">mario@skanderbegcapital.com</p>
+      <p class="footer-inq"><a href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
       <p class="footer-inq"><a class="foot-link" href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
     </div>
     <div class="footer-sm">
