new map, cbw stock added to ticker

--- a/_includes/home-connect.html
+++ b/_includes/home-connect.html
@@ -12,6 +12,6 @@
       </a>
   </div>
   <div class="hero-img">
-    <img class="map-graphic" src="http://cannabiswheaton.co/images/map2.png" alt="The network we are building stretches from coast to coast. This map illustrates our connectivity.">
+    <img class="map-graphic" src="{{site.baseurl}}/svgs/map3.svg" alt="The network we are building stretches from coast to coast. This map illustrates our connectivity.">
   </div>
 </section>
