--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav>
   <a href="{{site.baseurl}}/">
-    <img class="cw-logo" src="{{site.baseurl}}/svgs/cw-logo.svg" alt="Cannabis Wheaton logo">
+    <img class="cw-logo" src="{{site.baseurl}}/svgs/horizontal-logo.svg" alt="Cannabis Wheaton logo">
   </a>
 
   <div id="myNav" class="overlay" onclick="closeNav()">
@@ -13,12 +13,14 @@
     </div>
   </div>
 
+<!--
   <div class="stock-ticker">
     <div class="symbol"></div>
     <div class="ask"></div>
     <div class="asterisk">*</div>
     <div class="change"></div>
   </div>
+-->
 
   <span onclick="openNav()" class="hamburger">
     <img src="{{site.baseurl}}/svgs/hamburg-g.svg" class="ham-bars">
