--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,31 @@
 <footer id="footer">
   <div class="footer-wrap">
     <div class="footer-nav">
+      <a class="footer-link" href="{{site.baseurl}}/" onclick="closeNav()">Home</a>
       <a class="footer-link" href="{{site.baseurl}}/about" onclick="closeNav()">About Us</a>
       <a class="footer-link" href="{{site.baseurl}}/team" onclick="closeNav()">Team</a>
       <a class="footer-link" href="{{site.baseurl}}/contact" onclick="closeNav()">Contact</a>
     </div>
-    <div class="soshmeeds">
-      <a class="sosh-link" href="https://facebook.com/canwheaton">Facebook</a>
-      <a class="sosh-link" href="https://twitter.com/cannabiswheaton">Twitter</a>
-      <a class="sosh-link" href="https://linkedin.com/company-beta/18043832">LinkedIn</a>
-    </div>
     <div class="footer-inquiries">
-      <p class="footer-inq">INVESTOR RELATIONS</p>
-      <p class="footer-inq">604 667 7130</p>
-      <p class="footer-inq"><a href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
-      <p class="footer-inq"><a class="foot-link" href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
+      <p>INVESTOR RELATIONS</p>
+      <p><a class="footer-link" href="http://cannabiswheaton.co/images/CW_Deck_May_WS.pdf">View Investor Deck</a></p>
+      <p>604 687 7130</p>
+      <p><a class="footer-link" href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
+      <p><a class="footer-link" href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
     </div>
-    <div class="footer-sm">
-      <div class="delay">
-        <p>* Quote delayed by 20 minutes</p>
+    <div class="footer-group">
+      <div class="soshmeeds">
+        <a class="sosh-link" href="https://facebook.com/canwheaton"><img src="{{site.baseurl}}/svgs/fb-icon.svg"></a>
+        <a class="sosh-link" href="https://twitter.com/cannabiswheaton"><img src="{{site.baseurl}}/svgs/tw-icon.svg"></a>
+        <a class="sosh-link" href="https://linkedin.com/company-beta/18043832"><img src="{{site.baseurl}}/svgs/in-icon.svg"></a>
       </div>
-      <div class="footer-copyright">
-        <p class="copyright">© 2017 Cannabis Wheaton Income Corp.</p>
+      <div class="footer-sm">
+        <div class="delay">
+          <p>* Quote delayed by 20 minutes</p>
+        </div>
+        <div class="footer-copyright">
+          <p class="copyright">© 2017 Cannabis Wheaton Income Corp.</p>
+        </div>
       </div>
     </div>
   </div>
