--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,53 +1,91 @@
 footer {
   background-color: $navy;
+  text-align: center;
   position: relative;
   height: 250px;
   padding: 0 2rem;
   @include bp(tablet) {
     padding: 0;
-    height: 128px;
+    height: 155px;
   }
   .footer-wrap {
     max-width: 380px;
     text-align: center;
     margin: 0 auto;
-    padding: 4rem 0;
+    padding: 25px 0;
     @include bp(tablet) {
-      padding: 2rem 0;
+      padding: 2rem 0 1rem 0;
       max-width: 600px;
     }
     .footer-nav {
-      display: inline-block;
-      text-align: left;
-      width: 21%;
+      display: block;
+      width: 100%;
       vertical-align: top;
+      margin-bottom: 15px;
+      text-align: center;
       @include bp(tablet) {
-        width: 15%;
+        width: 8%;
+        text-align: left;
+        display: inline-block;
+        margin-right: 50px;
       }
       @include bp(desktop) {
 
       }
       .footer-link {
         font-size: 11px;
+        vertical-align: top;
         text-decoration: none;
         color: $m-grey;
-        display: block;
-        margin-bottom: 5px;
+        display: inline-block;
+        margin: 5px 10px;
         &:hover {
           color: #fff;
         }
         @include bp(tablet) {
-
+          margin: 5px 0;
+          display: block;
+        }
+      }
+    }
+    .footer-inquiries {
+      color: $m-grey;
+      display: block;
+      width: 100%;
+      margin-bottom: 20px;
+      vertical-align: top;
+      @include bp(tablet) {
+        width: 25%;
+        text-align: left;
+        margin-top: 5px;
+        display: inline-block;
+        margin-right: 45px;
+        margin-bottom: 0;
+      }
+      @include bp(desktop) {
+      }
+      p {
+        font-size: 11px;
+        margin-bottom: 5px;
+        .foot-green {
+          color: $green;
+        }
+        a {
+          text-decoration: none;
+          color: $m-grey;
+          &:hover {
+            color: #fff;
+          }
         }
       }
     }
     .soshmeeds {
-      text-align: left;
-      display: inline-block;
-      width: 21%;
+      display: block;
+      width: 100%;
       vertical-align: top;
+      margin-bottom: 15px;
       @include bp(tablet) {
-        width: 20%;
+
       }
       @include bp(desktop) {
 
@@ -56,7 +94,8 @@ footer {
         text-decoration: none;
         font-size: 11px;
         color: $m-grey;
-        display: block;
+        width: 25px;
+        display: inline-block;
         margin-bottom: 5px;
         &:hover {
           color: #fff;
@@ -66,60 +105,45 @@ footer {
         }
       }
     }
-    .footer-inquiries {
-      color: $m-grey;
-      text-align: left;
-      display: inline-block;
-      width: 52%;
+    .footer-group {
+      text-align: center;
       vertical-align: top;
       @include bp(tablet) {
-        width: 35%;
-      }
-      @include bp(desktop) {
-        right: 27rem;
-      }
-      p {
-        font-size: 11px;
-        margin-bottom: 5px;
-        a {
-          text-decoration: none;
-          color: $m-grey;
-        }
-      }
-    }
-    .footer-sm {
-      @include bp(tablet) {
+        text-align: left;
         display: inline-block;
-        width: 28%;
-        vertical-align: top;
       }
-      .delay {
-        text-align: center;
-        margin-top: 2rem;
+      .footer-sm {
         @include bp(tablet) {
-          text-align: left;
-          margin-top: 0;
+          display: inline-block;
+          width: 100%;
+          vertical-align: top;
+          margin-left: 8px;
         }
-        @include bp(desktop) {
-          right: 10rem;
+        .delay {
+          text-align: center;
+          @include bp(tablet) {
+            text-align: left;
+            margin-top: 0;
+          }
+          @include bp(desktop) {
+          }
+          p {
+            font-size: 8px;
+            color: $m-grey;
+          }
         }
-        p {
+        .footer-copyright {
+          text-align: center;
+          float: left;
+          width: 100%;
+          margin-top: 5px;
           font-size: 8px;
           color: $m-grey;
-        }
-      }
-      .footer-copyright {
-        text-align: center;
-        float: left;
-        width: 100%;
-        margin-top: 5px;
-        font-size: 8px;
-        color: $m-grey;
-        @include bp(tablet) {
-          text-align: left;
-        }
-        @include bp(desktop) {
-          right: 10rem;
+          @include bp(tablet) {
+            text-align: left;
+          }
+          @include bp(desktop) {
+          }
         }
       }
     }
