--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -96,7 +96,7 @@ footer {
         color: $m-grey;
         width: 25px;
         display: inline-block;
-        margin-bottom: 5px;
+        margin: 0 8px 5px 8px;
         &:hover {
           color: #fff;
         }
