--- a/_includes/footer-alt.html
+++ b/_includes/footer-alt.html
@@ -1,20 +1,13 @@
-<footer id="footer">
+<footer id="footer-alt">
   <div class="footer-wrap">
-    <div class="footer-nav">
+    <div class="footer-alt-nav">
       <a class="footer-link" href="{{site.baseurl}}/" onclick="closeNav()">Home</a>
       <a class="footer-link" href="{{site.baseurl}}/about" onclick="closeNav()">About Us</a>
       <a class="footer-link" href="{{site.baseurl}}/team" onclick="closeNav()">Team</a>
       <a class="footer-link" href="{{site.baseurl}}/investors" onclick="closeNav()">Investors</a>
       <a class="footer-link" href="{{site.baseurl}}/contact" onclick="closeNav()">Contact</a>
     </div>
-    <div class="footer-inquiries">
-      <p>INVESTOR RELATIONS</p>
-      <p><a class="footer-link foot-green" href="http://cannabiswheaton.co/images/CW_Deck_May_WS-2.pdf">View Investor Deck</a></p>
-      <p>604 687 7130</p>
-      <p><a class="footer-link" href="mailto:mario@skanderbegcapital.com">mario@skanderbegcapital.com</a></p>
-      <p><a class="footer-link" href="http://skanderbegcapital.com">skanderbegcapital.com</a></p>
-    </div>
-    <div class="footer-group">
+    <div class="footer-alt-group">
       <div class="soshmeeds">
         <a class="sosh-link" href="https://facebook.com/canwheaton"><img src="{{site.baseurl}}/svgs/fb-icon.svg"></a>
         <a class="sosh-link" href="https://twitter.com/cannabiswheaton"><img src="{{site.baseurl}}/svgs/tw-icon.svg"></a>
