--- a/css/style.scss
+++ b/css/style.scss
@@ -665,18 +665,23 @@ html {
   height: 500px;
   background-color: $m-navy;
   background-image: url(/svgs/map3.svg);
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: center;
-  position: relative;
-  .para-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    h2 {
-      a {
-        text-decoration: none;
-        color: $green;
+  .text-section {
+    height: 100%;
+    position: relative;
+    .para-box {
+      position: absolute;
+      width: 80%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      h2 {
+        a {
+          text-decoration: none;
+          color: $green;
+        }
       }
     }
   }
