investors image for deck link

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -60,6 +60,7 @@ footer {
         display: inline-block;
         margin-right: 45px;
         margin-bottom: 0;
+        text-align: left;
       }
       @include bp(desktop) {
       }
