--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <link href="{{site.baseurl}}/css/style.css" rel="stylesheet">
   <link href="{{site.baseurl}}/favicons/favicon.ico" rel="shortcut icon">
   <meta name="description" content="{{page.meta}}">
+  <meta name="google-site-verification" content="6j46R9GXiTKIpJI9Jceib_f7U8skRM37N6X-xGMBfuI" />
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
