--- a/_layouts/invest.html
+++ b/_layouts/invest.html
@@ -10,7 +10,7 @@
 
   </main>
 
-  {% include footer-alt.html %}
+  {% include footer.html %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="{{site.baseurl}}/js/main.js"></script>
