--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,7 @@
 @import "elements";
 @import "footer";
 @import "stocks";
+@import "subpages";
 
 @font-face {
   font-family: 'weissenhof_grotesk_light';
