--- a/_sass/_subpages.scss
+++ b/_sass/_subpages.scss
@@ -19,6 +19,7 @@
     padding: 4rem 10rem;
   }
   .article-list {
+    vertical-align: top;
     @include bp(tablet) {
       display: inline-block;
       width: 48%;
