--- a/_sass/_subpages.scss
+++ b/_sass/_subpages.scss
@@ -23,14 +23,14 @@
     @include bp(tablet) {
       display: inline-block;
       width: 48%;
-      padding: 2rem;
+      padding: 4rem;
       text-align: left;
     }
-    .list-header {
+    .subpage-text-header {
       text-align: center;
       font-size: 20px;
       font-weight: bold;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       @include bp(tablet) {
         text-align: left;
         font-size: 22px;
@@ -41,13 +41,14 @@
         margin-bottom: 2rem;
         .article-small {
           font-size: 12px;
+          color: $green;
         }
         .article-large {
           margin-top: 5px;
           margin-bottom: 10px;
           a {
             text-decoration: none;
-            color: $green;
+            color: $navy;
           }
         }
         .article-link {
@@ -56,6 +57,31 @@
           font-size: 12px;
         }
       }
+    }
+  }
+}
+
+.media-contact {
+  .subpage-text-header {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    @include bp(tablet) {
+      font-size: 22px;
+    }
+  }
+  .article-large:last-child {
+    font-size: 14px;
+    margin-top: 5px;
+    font-weight: bold;
+  }
+  .article-large {
+    font-size: 12px;
+    margin-bottom: 5px;
+    a {
+      color: $green;
+      text-decoration: none;
     }
   }
 }
