--- a/_sass/_subpages.scss
+++ b/_sass/_subpages.scss
@@ -73,7 +73,7 @@
   }
   .article-large:last-child {
     font-size: 14px;
-    margin-top: 5px;
+    margin-top: 1rem;
     font-weight: bold;
   }
   .article-large {
