--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -5,15 +5,15 @@ $grey: #434549;
 $m-grey: #888;
 $l-grey: #f1f1f2;
 
-.txt-green {
+.text-green {
   color: $green;
 }
 
-.txt-navy {
+.text-navy {
   color: $navy;
 }
 
-.txt-grey {
+.text-grey {
   color: $grey;
 }
 
