--- a/_sass/_subpages.scss
+++ b/_sass/_subpages.scss
@@ -1,6 +1,9 @@
 .subpage-header {
   background-color: $navy;
   padding-top: 100px;
+  .para-header-alt {
+    text-transform: uppercase;
+  }
   .para-body {
     color: #fff;
   }
@@ -83,5 +86,17 @@
       color: $green;
       text-decoration: none;
     }
+  }
+}
+
+// typography
+
+.subpage-text-header {
+  text-align: left;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  @include bp(tablet) {
+    font-size: 22px;
   }
 }
