--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,12 @@
 @import "reset";
 @import "elements";
 @import "footer";
+@import "about";
+@import "team";
+@import "contact";
+@import "thankyou";
+@import "investors";
+@import "404";
 @import "stocks";
 @import "subpages";
 
@@ -173,551 +179,6 @@ html {
     @include bp(tablet) {
       height: 700px;
       padding: 3rem 2rem;
-    }
-  }
-}
-
-//about-page
-.graphic {
-  background-color: $m-navy;
-  .large-graphic {
-    @include fade-in;
-    display: none;
-    @include bp(desktop) {
-      display: block;
-    }
-    .img-flex {
-      @include bp(desktop) {
-        height: 600px;
-      }
-    }
-  }
-  .med-graphic {
-    @include fade-in;
-    display: none;
-    @include bp(tablet) {
-      display: block;
-    }
-    @include bp(desktop) {
-      display: none;
-    }
-    .img-flex {
-      @include bp(desktop) {
-        height: 600px;
-      }
-    }
-  }
-  .small-graphic {
-    @include fade-in;
-    display: block;
-    @include bp(tablet) {
-      display: none;
-    }
-  }
-  @include bp(desktop) {
-    height: 600px;
-  }
-}
-
-.number-graphics {
-  background-color: $m-navy;
-  .numbers {
-    padding: 2rem;
-    text-align: center;
-    @include bp(phone) {
-    }
-    @include bp(tablet) {
-      padding: 4rem;
-    }
-    @include bp(desktop) {
-      @include wrapper;
-      padding: 4rem 6rem;
-      height: 400px;
-    }
-    .number-aster {
-      color: $l-grey;
-      font-size: 10px;
-      margin-bottom: 1rem;
-      padding-top: 2rem;
-      clear: both;
-    }
-  }
-  .count {
-    @include fade-in;
-    padding: 2rem 0;
-    position: relative;
-    @include bp(tablet) {
-      width: 50%;
-      float: left;
-    }
-    @include bp(desktop) {
-      width: 25%;
-    }
-    .number-counter {
-      color: $green;
-      font-size: 100px;
-      font-weight: bold;
-      letter-spacing: -2px;
-      margin-bottom: 1rem;
-      .superscript {
-        font-size: 60px;
-        position: absolute;
-        top: 2rem;
-      }
-    }
-    .number-context {
-      color: #fff;
-      font-size: 14px;
-      margin-bottom: 1rem;
-    }
-    .underline {
-      width: 10%;
-    }
-  }
-  .patient-count {
-    @include bp(desktop) {
-      transition-delay: .2s;
-    }
-  }
-  .partner-count {
-    @include bp(desktop) {
-      transition-delay: .4s;
-    }
-  }
-  .footage-count {
-    @include bp(desktop) {
-      transition-delay: .6s;
-    }
-  }
-}
-
-.about-financial {
-  @include clearfix;
-  @include bp(desktop) {
-    padding: 8rem 10rem;
-  }
-  .para-box {
-    @include bp(tablet) {
-      width: 100%;
-    }
-    @include bp(desktop) {
-      padding-left: 0;
-      padding-right: 0;
-    }
-  }
-  .para-body-alt {
-    @include bp(tablet) {
-      width: 100%;
-    }
-  }
-}
-
-.about-grid {
-  @include wrapper;
-  clear: both;
-  padding: 2rem 0;
-  @include bp(tablet) {
-    padding: 4rem 4rem 0 4rem;
-  }
-  @include bp(desktop) {
-    padding: 8rem 4rem;
-  }
-  .about-grid-header {
-    padding: 2rem 1rem;
-    font-size: 36px;
-    text-align: center;
-    color: $green;
-    line-height: 1.1;
-    @include bp(tablet) {
-      font-size: 48px;
-      padding: 0 2rem;
-    }
-  }
-}
-
-.banner-img-left {
-  height: 220px;
-  img {
-    width: 220px;
-    margin: 0 auto;
-    @include bp(tablet) {
-      width: 250px;
-      padding: 1rem 0 0 0;
-      margin: 0 auto;
-    }
-    @include bp(desktop) {
-      padding: 0 0 2rem 2rem;
-      width: 300px;
-    }
-  }
-  @include bp(tablet) {
-    transform: translateY(20%);
-    height: auto;
-    width: 45%;
-    margin-right: 5%;
-    float: left;
-    z-index: 1;
-    overflow: hidden;
-  }
-  @include bp(desktop) {
-    width: 35%;
-    margin-left: 5rem;
-  }
-}
-
-.banner-img-right {
-  height: 220px;
-  img {
-    width: 220px;
-    margin: 0 auto;
-    @include bp(tablet) {
-      width: 250px;
-      padding: 1rem 0 0 0;
-      margin: 0 auto;
-    }
-    @include bp(desktop) {
-      padding: 0 2rem 2rem 0;
-      width: 300px;
-    }
-  }
-  @include bp(tablet) {
-    transform: translateY(20%);
-    height: auto;
-    width: 45%;
-    margin-left: 5%;
-    float: right;
-    z-index: 1;
-    overflow: hidden;
-  }
-  @include bp(desktop) {
-    width: 35%;
-    margin-right: 5rem;
-  }
-}
-
-.banner-img-center {
-  height: 200px;
-  img {
-    height: 100%;
-    margin: 0 auto;
-    @include bp(tablet) {
-      width: 100%;
-      margin: 0;
-    }
-    @include bp(desktop) {
-      width: 100%;
-    }
-  }
-  @include bp(tablet) {
-    width: 20%;
-    z-index: 1;
-    margin: 0 auto;
-    height: auto;
-  }
-}
-
-//team page
-.team-name {
- color: $green;
- margin-bottom: .5em;
-}
-
-.team-title {
- font-size: 80%;
-}
-
-.team-header {
-  padding: 2rem 1rem 0 1rem;
-  font-size: 36px;
-  text-align: center;
-  color: $green;
-  line-height: 1.1;
-  margin-top: 2rem;
-  @include bp(tablet) {
-    font-size: 48px;
-    padding: 0 2rem;
-  }
-}
-
-.team-profiles {
-  margin-bottom: 0;
-  padding: 2rem;
-  @include bp(phone) {
-    padding:  1rem 2rem;
-  }
-  @include bp(tablet) {
-    padding: 2rem 4rem;
-  }
-  @include bp(desktop) {
-    padding: 4rem 15rem;
-    @include wrapper;
-  }
-}
-.team-member {
-  font-size: 1rem;
-  margin-bottom: 2rem;
-  display: inline-block;
-
-  .team-photo {
-    margin-bottom: 1rem;
-    width: 100%;
-    @include bp(phone) {
-      width: 50%;
-      margin-right: 1.5rem;
-      float: left;
-    }
-     @include bp(tablet) {
-      width: 20%;
-      margin-right: 2.2rem;
-    }
-    @include bp(desktop) {
-      margin-right: 2rem;
-     }
-  }
-  .team-name {
-    font-size: 24px;
-    font-weight: 400;
-    margin-bottom: 0.4rem;
-    @include bp(phone) {
-      font-size: 1.9rem;
-      padding-top: 4rem;
-    }
-    @include bp(tablet) {
-      padding-top: 2rem;
-    }
-  }
-  .team-title {
-    font-style: italic;
-    line-height: 1.2;
-    margin-bottom: 1rem;
-  }
-  .team-bio {
-    line-height: 1.6;
-    font-size: 0.8rem;
-    @include bp(phone) {
-      clear: both;
-    }
-    @include bp(tablet) {
-      clear: none;
-      width: 100%;
-      float: left;
-      -webkit-column-count: 2; /* Chrome, Safari, Opera */
-      -moz-column-count: 2; /* Firefox */
-      column-count: 2;
-      column-gap: 1.5rem;
-    }
-  }
-}
-
-//contact page
-.contact {
-  .video-text-overlay {
-    h1 {
-      margin-top: 6rem;
-    }
-    form {
-      margin-top: 1rem;
-      ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-        color: #fff;
-        font-size: 12px;
-      }
-      ::-moz-placeholder { /* Firefox 19+ */
-        color: #fff;
-        font-size: 12px;
-      }
-      :-ms-input-placeholder { /* IE 10+ */
-        color: #fff;
-        font-size: 12px;
-      }
-      :-moz-placeholder { /* Firefox 18- */
-        color: #fff;
-        font-size: 12px;
-      }
-      @include bp(tablet) {
-        margin-top: 3rem;
-      }
-      .form-group.form-text {
-        @include bp(tablet) {
-          width: 100%;
-          padding-right: 2rem;
-        }
-      }
-      .form-group {
-        position: relative;
-        @include clearfix;
-        @include bp(tablet) {
-          width: calc(50% - 2rem);
-          float: left;
-          margin: 0 1rem;
-        }
-        label {
-          position: absolute;
-          color: #fff;
-          font-size: 12px;
-          left: 1rem;
-          top: 1rem;
-        }
-        input {
-          width: 100%;
-          display: block;
-          outline: none;
-          margin-bottom: 1rem;
-          padding: 0 0 0 1rem;
-          height: 70px;
-          border: none;
-          border: 1px solid #fff;
-          background-color: transparent;
-          font-family: $weiss;
-          color: #fff;
-          font-size: 16px;
-          &:focus {
-            border: 1px solid $green;
-          }
-          &:focus + label {
-            color: $green;
-          }
-          @include bp(tablet) {
-            height: 100px;
-            margin-right: 2rem;
-          }
-        }
-        input:nth-child(2) {
-          @include bp(tablet) {
-            clear: both;
-          }
-        }
-        textarea {
-          resize: none;
-          width: 100%;
-          height: 150px;
-          padding: 2.5rem 1rem 0 1rem;
-          border: none;
-          outline: none;
-          border: 1px solid #fff;
-          background-color: transparent;
-          font-family: $weiss;
-          color: #fff;
-          font-size: 16px;
-          margin-bottom: 2rem;
-          &:focus {
-            border: 1px solid $green;
-          }
-          &:focus + label {
-            color: $green;
-          }
-          @include bp(tablet) {
-            @include clearfix;
-            height: calc(200px + 1rem);
-          }
-        }
-      }
-      .submit-btn {
-        position: absolute;
-        right: 2rem;
-        top: 90%;
-        @include bp(tablet) {
-          top: 88%;
-          right: 2.9rem;
-          position: absolute;
-          transform: translateX(-50%);
-        }
-        @include bp(desktop) {
-          right: 6.95rem;
-        }
-      }
-    }
-    .inquiries {
-      color: #fff;
-      text-align: left;
-      width: 60%;
-      float: left;
-      @include bp(tablet) {
-        margin-left: 1rem;
-      }
-      p {
-        font-size: 12px;
-        margin-bottom: 5px;
-      }
-    }
-  }
-}
-
-//Thank-you page
-
-.thanks-page {
-  height: 100vh;
-  padding-top: 30%;
-  @include bp(tablet) {
-    padding-top: 20%;
-  }
-}
-
-//404 page
-.error-page {
-  height: 100vh;
-  padding-top: 30%;
-  @include bp(tablet) {
-    padding-top: 20%;
-  }
-}
-
-//investors page
-.investor-page {
-  padding-top: 70px;
-  .bg-video {
-    height: 600px;
-  }
-  .hero-header {
-    text-transform: none;
-  }
-  .hero-sub {
-    color: $navy;
-  }
-  .deck-link {
-    display: block;
-    overflow: hidden;
-    position: relative;
-    text-decoration: none;
-    color: #fff;
-    transition: opacity .2s linear;
-    &:hover {
-      opacity: .9;
-    }
-    h2 {
-      @include hero-text;
-      width: 80%;
-      font-size: 36px;
-      text-align: center;
-      @include bp(tablet) {
-        font-size: 48px;
-      }
-    }
-    img {
-      width: 200%;
-      transform: translateX(-25%);
-      @include bp(tablet) {
-        width: 100%;
-        transform: translateY(0%);
-      }
-    }
-  }
-  .pre-footer {
-    .investor-relations {
-      padding: 4rem 0;
-      text-align: center;
-      font-size: 14px;
-      color: $m-grey;
-      p {
-        margin-bottom: 5px;
-      }
-      a {
-        color: $m-grey;
-        margin-bottom: 5px;
-        text-decoration: none;
-        &:hover {
-          color: $green;
-        }
-      }
     }
   }
 }
