--- a/_sass/_subpages.scss
+++ b/_sass/_subpages.scss
@@ -43,6 +43,7 @@
       li {
         margin-bottom: 2rem;
         .article-small {
+          margin-bottom: 8px;
           font-size: 12px;
           color: $green;
         }
@@ -50,6 +51,7 @@
           margin-top: 5px;
           margin-bottom: 10px;
           a {
+            line-height: 1.4;
             text-decoration: none;
             color: $navy;
           }
@@ -65,38 +67,27 @@
 }
 
 .media-contact {
+  padding: 4rem 0;
+  margin: 0 auto;
+  max-width: 500px;
+  color: $m-grey;
   .subpage-text-header {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    @include bp(tablet) {
-      font-size: 22px;
-    }
-  }
-  .article-large:last-child {
+    margin-bottom: 5px;
     font-size: 14px;
-    margin-top: 1rem;
-    font-weight: bold;
+    text-align: center;
   }
   .article-large {
-    font-size: 12px;
+    text-align: center;
     margin-bottom: 5px;
+    font-size: 14px;
     a {
-      color: $green;
+      color: $m-grey;
       text-decoration: none;
+      &:hover {
+        color: $green;
+      }
     }
   }
 }
 
 // typography
-
-.subpage-text-header {
-  text-align: left;
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 1rem;
-  @include bp(tablet) {
-    font-size: 22px;
-  }
-}
