--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,12 @@
 <footer>
   <div class="footer-wrap">
     <div class="footer-nav">
-      <a class="footer-link" href="{{site.baseurl}}/" onclick="closeNav()">Home</a>
-      <a class="footer-link" href="{{site.baseurl}}/about" onclick="closeNav()">About Us</a>
-      <a class="footer-link" href="{{site.baseurl}}/team" onclick="closeNav()">Team</a>
-      <a class="footer-link" href="{{site.baseurl}}/investors" onclick="closeNav()">Investors</a>
-      <a class="footer-link" href="{{site.baseurl}}/contact" onclick="closeNav()">Contact</a>
+      <a class="footer-link" href="{{site.baseurl}}/">Home</a>
+      <a class="footer-link" href="{{site.baseurl}}/about">About Us</a>
+      <a class="footer-link" href="{{site.baseurl}}/team">Team</a>
+      <a class="footer-link" href="{{site.baseurl}}/investors">Investors</a>
+      <a class="footer-link" href="{{site.baseurl}}/news">News</a>
+      <a class="footer-link" href="{{site.baseurl}}/contact">Contact</a>
     </div>
     <div class="footer-group">
       <div class="soshmeeds">
