--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,8 +9,7 @@
       <a href="{{site.baseurl}}/" onclick="closeNav()">HOME</a>
       <a href="{{site.baseurl}}/about" onclick="closeNav()">ABOUT US</a>
       <a href="{{site.baseurl}}/team" onclick="closeNav()">TEAM</a>
-      <a href="{{site.baseurl}}/investors" onclick="closeNav()">INVESTORS</a>
-      <a href="{{site.baseurl}}/news" onclick="closeNav()">NEWS</a>
+      <a href="{{site.baseurl}}/investors" onclick="closeNav()">INVESTORS & NEWS</a>
       <a href="{{site.baseurl}}/contact" onclick="closeNav()">CONTACT</a>
     </div>
   </div>
