--- a/_sass/_subpages.scss
+++ b/_sass/_subpages.scss
@@ -12,10 +12,10 @@
 .subpage-body {
   padding: 1rem;
   @include bp(phone) {
-    padding: 2rem;
+    padding: 0 2rem;
   }
   @include bp(tablet) {
-    padding: 4rem;
+    padding: 0 4rem;
     text-align: center;
   }
   @include bp(desktop) {
@@ -26,18 +26,8 @@
     @include bp(tablet) {
       display: inline-block;
       width: 48%;
-      padding: 4rem;
+      padding: 0 4rem;
       text-align: left;
-    }
-    .subpage-text-header {
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 1rem;
-      @include bp(tablet) {
-        text-align: left;
-        font-size: 22px;
-      }
     }
     ul {
       li {
@@ -66,28 +56,61 @@
   }
 }
 
-.media-contact {
-  padding: 4rem 0;
-  margin: 0 auto;
-  max-width: 500px;
-  color: $m-grey;
-  .subpage-text-header {
-    margin-bottom: 5px;
-    font-size: 14px;
-    text-align: center;
+.pre-footer {
+  padding: 1rem 1rem;
+  text-align: center;
+  @include bp(phone) {
+    padding: 2rem 2rem;
   }
-  .article-large {
+  @include bp(tablet) {
+    padding: 4rem 4rem;
+  }
+  @include bp(desktop) {
+    padding: 4rem 10rem;
+  }
+  .pre-footer-header {
+    padding-top: 3rem;
+    border-top: 1px solid $green;
     text-align: center;
-    margin-bottom: 5px;
-    font-size: 14px;
-    a {
-      color: $m-grey;
-      text-decoration: none;
-      &:hover {
-        color: $green;
+    font-size: 36px;
+    color: $green;
+    margin-bottom: 2rem;
+  }
+  .key-contact {
+    margin: 0 auto 2rem auto;
+    max-width: 500px;
+    @include bp(tablet) {
+      display: inline-block;
+      width: 48%;
+      padding: 0 4rem;
+      text-align: left;
+      vertical-align: top;
+    }
+    @include bp(desktop) {
+      padding: 0 0 0 4rem;
+    }
+    .article-large {
+      margin-bottom: 5px;
+      font-size: 14px;
+      a {
+        color: $m-grey;
+        text-decoration: none;
+        &:hover {
+          color: $green;
+        }
       }
     }
   }
 }
 
 // typography
+.subpage-text-header {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  @include bp(tablet) {
+    text-align: left;
+    font-size: 22px;
+  }
+}
