fixes on news page, team edits

--- a/_sass/_investors.scss
+++ b/_sass/_investors.scss
@@ -1,5 +1,4 @@
 .investor-page {
-  padding-top: 70px;
   .bg-video {
     height: 600px;
   }
@@ -41,7 +40,7 @@
 }
 
 .news-page {
-  margin-top: 3rem;
+  margin-top: -4px;
   .para-header-alt {
     padding: 0 2rem;
     text-align: center;
