--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -2,6 +2,10 @@
 $weiss: 'weissenhof_grotesk_light', sans-serif;
 $weiss-m: 'weissenhof_grotesk_med', sans-serif;
 
+.italic {
+  font-style: italic;
+}
+
 .hero-header {
   color: $green;
   font-size: 24px;
