--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <a class="footer-link" href="{{site.baseurl}}/">Home</a>
       <a class="footer-link" href="{{site.baseurl}}/about">About Us</a>
       <a class="footer-link" href="{{site.baseurl}}/team">Team</a>
-      <a class="footer-link" href="{{site.baseurl}}/investors">Investors</a>
+      <a class="footer-link" href="{{site.baseurl}}/investors">Investors & News</a>
       <a class="footer-link" href="{{site.baseurl}}/contact">Contact</a>
     </div>
     <div class="footer-group">
