--- a/_sass/_subpages.scss
+++ b/_sass/_subpages.scss
@@ -1,25 +1,39 @@
 .subpage-header {
-  background-color: $navy;
-  padding-top: 100px;
+  padding-top: 350px;
+  padding-bottom: 250px;
   .para-header-alt {
-    text-transform: uppercase;
   }
   .para-body {
-    color: #fff;
+    color: $navy;
+    margin-bottom: 0;
+  }
+}
+
+.subpage-subheader {
+  padding-top: 200px;
+  padding-bottom: 130px;
+  @include bp(tablet) {
+
+  }
+  .para-header-alt {
+  }
+  .para-body {
+    color: $navy;
+    margin-bottom: 0;
   }
 }
 
 .subpage-body {
   padding: 1rem;
   @include bp(phone) {
-    padding: 0 2rem;
+    padding: 2rem;
   }
   @include bp(tablet) {
-    padding: 0 4rem;
+    padding: 0 4rem 4rem 4rem;
     text-align: center;
   }
   @include bp(desktop) {
-    padding: 4rem 10rem;
+    padding: 0 10rem 4rem 10rem;
   }
   .article-list {
     vertical-align: top;
@@ -44,6 +58,9 @@
             line-height: 1.4;
             text-decoration: none;
             color: $navy;
+            &:hover {
+              color: $m-grey;
+            }
           }
         }
         .article-link {
@@ -58,7 +75,6 @@
 
 .pre-footer {
   padding: 1rem 1rem;
-  text-align: center;
   @include bp(phone) {
     padding: 2rem 2rem;
   }
@@ -69,21 +85,22 @@
     padding: 4rem 10rem;
   }
   .pre-footer-header {
-    padding-top: 3rem;
+    padding-top: 5rem;
     border-top: 1px solid $green;
     text-align: center;
     font-size: 36px;
     color: $green;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
+    @include bp(tablet) {
+      font-size: 48px;
+    }
   }
   .key-contact {
+    text-align: center;
     margin: 0 auto 2rem auto;
-    max-width: 500px;
     @include bp(tablet) {
-      display: inline-block;
-      width: 48%;
+
       padding: 0 4rem;
-      text-align: left;
       vertical-align: top;
     }
     @include bp(desktop) {
@@ -100,17 +117,20 @@
         }
       }
     }
+    .subpage-text-header {
+      text-align: center;
+    }
   }
 }
 
 // typography
 .subpage-text-header {
   text-align: center;
-  font-size: 20px;
-  font-weight: bold;
+  color: $navy;
+  font-size: 28px;
   margin-bottom: 1rem;
   @include bp(tablet) {
     text-align: left;
-    font-size: 22px;
+    font-size: 30px;
   }
 }
