--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -9,13 +9,13 @@
 
 .team-header {
   font-size: 36px;
-  margin-bottom: 2rem;
+  padding-top: 5rem;
+  margin-bottom: 4rem;
   text-align: center;
   color: $green;
   line-height: 1.1;
   @include bp(tablet) {
     font-size: 48px;
-    padding: 0 2rem;
   }
 }
 
