--- a/_sass/_subpages.scss
+++ b/_sass/_subpages.scss
@@ -104,7 +104,7 @@
       vertical-align: top;
     }
     @include bp(desktop) {
-      padding: 0 0 0 4rem;
+      padding: 0;
     }
     .article-large {
       margin-bottom: 5px;
