--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -34,7 +34,9 @@
   font-size: 1rem;
   margin-bottom: 2rem;
   display: inline-block;
-
+  .subpage-text-header {
+    text-align: left;
+  }
   .team-photo {
     margin-bottom: 1rem;
     width: 100%;
